# hoopvision

./: .gitignore  .vercelignore  README.md  package.json  pyproject.toml  requirements.txt  skills-lock.json  vercel.json
.agents/skills/software-factory/: SKILL.md
api/: index.py
backend/: main.py
backend/app/: api.py  bracket.py  draft.py  draft_eras.py  draft_scoring.py  era_adjustment.py  matchup_data.py  nba_stats_client.py  player_data.py  shotchart.py  simulation.py  tendency_profile.py
backend/data/: player_advanced_stats.csv  tendency_model_v2_matchup_conditioned.joblib
backend/scripts/: compile_advanced_stats.py  train_tendency_model.py
backend/tests/: test_api_bracket.py  test_api_player_search.py  test_api_player_seasons.py  test_bracket.py  test_draft_pool.py  test_draft_scoring.py  test_era_adjustment.py  test_matchup_data.py  test_nba_stats_client.py  test_player_data.py  test_shotchart.py  test_simulation.py  test_tendency_profile.py  test_train_tendency_model.py
docs/spikes/: wo-16-defender-conditioned-zone-data.md
frontend/: CLAUDE.md  DESIGN.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx
frontend/src/assets/: Home.tsx  Navbar.tsx  Scoreboard.tsx  Simulator.tsx
frontend/src/components/: AppFooter.tsx  BracketBoard.tsx  BracketBuilder.tsx  BracketTree.tsx  CourtDraftBoard.tsx  DraftResultCard.tsx  HeaderBackdrop.tsx  PlacementSheet.tsx  PlayerPoolPanel.tsx  PlayerSearchCombobox.tsx  SectionBlock.tsx  SpinnerPanel.tsx  editorial.tsx  (+2 more)
(+53 files in other folders)
