[project]
name = "hoopvision"
version = "0.1.0"
description = "NBA matchup simulator API backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "nba_api>=1.5.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "requests>=2.31.0",
    "upstash-redis>=1.1.0",
]

[tool.vercel]
entrypoint = "backend.app.api:app"
